--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost/blog_pessoal?createDatabaseIfNotExist=true&serverTimezone=UTC&useSSL=false
-spring.datasource.username=root
-spring.datasource.password=root
+spring.jpa.generate-ddl=true
+spring.datasource.url=${JDBC_DATASOURCE_URL}
 spring.jpa.show-sql=true
+spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
+spring.jackson.time-zone=Brazil/East
